--- a/HumMod.INI
+++ b/HumMod.INI
@@ -1,5 +1,6 @@
 <ini>
-<time> Mon Jun 06 11:14:05 2016 </time>
+<time> Tue Dec 06 15:06:19 2016 </time>
 <window><top> 73 </top><left> 75 </left><high> 891 </high><wide> 1492 </wide></window>
+<setxtoic/>
 <arrows> 4 </arrows>
 </ini>
